plugins/wasm-go/extensions/cluster-key-rate-limit/envoy.yaml
admin:
  address:
    socket_address:
      protocol: TCP
      address: 0.0.0.0
      port_value: 9901

static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          protocol: TCP
          address: 0.0.0.0
          port_value: 10000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                # Output envoy logs to stdout
                access_log:
                  - name: envoy.access_loggers.stdout
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: httpbin
                            timeout: 30s
                http_filters:
                  - name: cluster-key-rate-limit
                    typed_config:
                      "@type": type.googleapis.com/udpa.type.v1.TypedStruct
                      type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
                      value:
                        config:
                          name: cluster-key-rate-limit
                          vm_config:
                            runtime: envoy.wasm.runtime.v8
                            code:
                              local:
                                filename: /etc/envoy/plugin.wasm
                          configuration:
                            "@type": "type.googleapis.com/google.protobuf.StringValue"
                            value: |
                              {
                                "rule_name": "test-rate-limit-rule",
                                "rule_items": [
                                  {
                                    "limit_by_param": "apikey",
                                    "limit_keys": [
                                      {
                                        "key": "test-key-1",
                                        "query_per_minute": 5
                                      },
                                      {
                                        "key": "test-key-2",
                                        "query_per_minute": 10
                                      }
                                    ]
                                  },
                                  {
                                    "limit_by_header": "x-api-key",
                                    "limit_keys": [
                                      {
                                        "key": "header-key-1",
                                        "query_per_second": 2
                                      }
                                    ]
                                  },
                                  {
                                    "limit_by_per_param": "user",
                                    "limit_keys": [
                                      {
                                        "key": "*",
                                        "query_per_minute": 20
                                      }
                                    ]
                                  }
                                ],
                                "redis": {
                                  "service_name": "redis",
                                  "service_port": 6379,
                                  "timeout": 2000
                                },
                                "show_limit_quota_header": true,
                                "rejected_code": 429,
                                "rejected_msg": "Too many requests. Please try again later."
                              }
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: httpbin
      connect_timeout: 30s
      type: LOGICAL_DNS
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: httpbin
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: httpbin
                      port_value: 80

    - name: outbound|6379||redis
      connect_timeout: 5s
      type: LOGICAL_DNS
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: outbound|6379||redis
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: redis
                      port_value: 6379
